<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TradingHall"
    android:background="@drawable/herreria">

    <TextView
        android:id="@+id/mercazumatitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/hall"
        android:textColor="@color/black"
        android:textSize="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="185dp"
        android:layout_height="32dp"
        android:layout_marginTop="132dp"
        android:text="@string/hall_em"
        android:textAlignment="center"
        android:textSize="19dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/AutoC"
        android:layout_width="232dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/gris_azul"
        android:onClick="autoclick"
        android:text="@string/autobuy"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="243dp"
        android:layout_height="133dp"
        android:layout_marginBottom="404dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/aumentar"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/xavier"
            android:onClick="mejora"
            android:text="@string/clicks"
            android:textColor="@color/gris_verdoso"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/shawn"
            android:onClick="multiplicador"
            android:text="@string/multiplicador"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="133dp"
        android:layout_height="129dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.988"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264" />

    <Button
        android:id="@+id/button7"
        android:layout_width="182dp"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@android:color/transparent"
        android:onClick="volver"
        android:text="@string/vol"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/puntosclicks"
        android:layout_width="199dp"
        android:layout_height="41dp"
        android:layout_marginTop="132dp"
        android:text="@string/emmers"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/oc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="TextView"
        android:textColor="#71E0F8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.005"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>